--- a/Blank1200px.css
+++ b/Blank1200px.css
@@ -122,6 +122,7 @@ p {
 
 main {
   grid-column: span 10;
+  flex-grow: 1;
 }
 
 h2 {
@@ -202,9 +203,19 @@ main a {
     margin-left: 16px;
 }
 
-.social {
+#myCarousel {
+  margin: 10px;
   float: right;
-  margin-left: 16px;
+  --f-carousel-slide-gap: 40px;
+}
+
+#myCarousel .f-carousel__slide {
+  text-align: center;
+}
+
+.f-carousel__slide {
+  width: 250px;
+  height: 400px;
 }
 
 .forsolo a {
@@ -238,4 +249,5 @@ main a {
   text-align: right;
   font-family:'Courier New', Courier, monospace;
   color: black;
+  margin-top: 190px;
 }
