--- a/home.css
+++ b/home.css
@@ -55,6 +55,7 @@ nav li {
     display: inline-block;
     width: 144px;
     background-color: dodgerblue;
+    background-size: cover;
 }
 
 nav li a {
@@ -98,8 +99,10 @@ nav li a:hover {
 
 p {
   color: white;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  size: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 12px;
+  font-weight: lighter;
+  margin-bottom: 10px;
 }
 
 .shows {
@@ -125,51 +128,40 @@ main {
 }
 
 h2 {
-    font-family: "Grenze Gotisch", serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     color: white;
     padding-bottom: 10px;
-    letter-spacing: 5px;
+    letter-spacing: 14px;
     font-size: 32px;
     text-align: center;
-    text-shadow: 3px 3px 3px #000000;
-}
-
-.bandcamp {
-  margin-left: 20px;
-  float: left;
-}
-
-.desc {
-  text-align: center;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  size: 18px;
+    text-shadow: 4px 2px 2px #000;
 }
 
 h3 {
   text-align: center;
-  font-size: 32px;
-  font-family: "Honk", system-ui;
-  letter-spacing: 10px;
+  font-size: 24px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: black;
   padding-bottom: 20px;
 }
 
 .huh {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 18px;
     text-align: justify;
     color: black;
+    margin-bottom: 10px;
 }
 
 .huh3 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 30px;
+  font-size: 21px;
   letter-spacing: 3px;
   color: white;
   text-align: center;
   text-decoration: underline;
-  margin-top: -100px;
+  margin-top: -80px;
 }
 
 .imgmarg {
@@ -180,12 +172,10 @@ main a {
     color: white;
     font-size: 75px;
     transition: all 1s;
-    margin-left: 70px;
 }
 
 .spotify a {
-  margin-right: 30px;
-  margin-bottom: -30px;
+  margin-right: 20px;
 }
 
 .spotify a:hover {
@@ -201,138 +191,10 @@ main a {
 }
 
 .youtube a {
-  margin-bottom: -30px;
-  margin-left: 115px;
+  margin-left: 105px;
 }
 
 .youtube a:hover {
-  color: red;
-}
-
-.spotembed {
-  margin: 10px;
-  position: relative;
-  top: 210px;
-  right: 360px;
-}
-
-.h32 {
-  text-align: center;
-  font-size: 32px;
-  font-family: "Honk", system-ui;
-  letter-spacing: 10px;
-  color: black;
-  padding-bottom: 20px;
-  position: relative;
-  left: 200px;
-  bottom: 200px;
-}
-
-.desc2 {
-  text-align: center;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  size: 18px;
-  position: relative;
-  left: 200px;
-  bottom: 200px;
-}
-
-.spotify2 a {
-  margin-right: 30px;
-  margin-bottom: -30px;
-  position: relative;
-  left: 450px;
-  bottom: 200px;
-}
-
-.spotify2 a:hover {
-  color: limegreen;
-}
-
-.apple2 a {
-  margin-left: 90px;
-  position: relative;
-  left: 388px;
-  bottom: 200px;
-}
-
-.apple2 a:hover {
-  color: #FF4E6B;
-}
-
-.youtube2 a {
-  margin-bottom: -30px;
-  margin-left: 115px;
-  position: relative;
-  left: 336px;
-  bottom: 200px;
-}
-
-.youtube2 a:hover {
-  color: red;
-}
-
-.spotembed2 {
-  margin: 10px;
-  position: relative;
-  bottom: 20px;
-  left: 10px;
-}
-
-.h33 {
-  text-align: center;
-  font-size: 32px;
-  font-family: "Honk", system-ui;
-  letter-spacing: 10px;
-  color: black;
-  padding-bottom: 20px;
-  position: relative;
-  left: 200px;
-  bottom: 420px;
-}
-
-.desc3 {
-  text-align: center;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  size: 18px;
-  position: relative;
-  left: 200px;
-  bottom: 420px;
-}
-
-
-.spotify3 a {
-  margin-right: 30px;
-  margin-bottom: -30px;
-  position: relative;
-  left: 450px;
-  bottom: 420px;
-}
-
-.spotify3 a:hover {
-  color: limegreen;
-}
-
-.apple3 a {
-  margin-left: 90px;
-  position: relative;
-  left: 388px;
-  bottom: 420px;
-}
-
-.apple3 a:hover {
-  color: #FF4E6B;
-}
-
-.youtube3 a {
-  margin-bottom: -30px;
-  margin-left: 115px;
-  position: relative;
-  left: 336px;
-  bottom: 420px;
-}
-
-.youtube3 a:hover {
   color: red;
 }
 
@@ -345,6 +207,21 @@ main a {
     margin-left: 16px;
 }
 
+#myCarousel {
+  margin: 10px;
+  float: right;
+  --f-carousel-slide-gap: 40px;
+}
+
+#myCarousel .f-carousel__slide {
+  text-align: center;
+}
+
+.f-carousel__slide {
+  width: 250px;
+  height: 400px;
+}
+
 .forsolo a {
    size: 60px;
    float: left;
@@ -352,7 +229,7 @@ main a {
     transition: all 750ms;
     mask-repeat: none;
     margin-top: -8px;
-    margin-left: 16px;
+    margin-left: 70px;
 }
 
 .forsolo a:hover {
@@ -367,8 +244,20 @@ main a {
   margin-top: 5px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
-  margin-left: 110px;
+  margin-left: 170px;
   text-shadow: 2px 2px 2px #000;
+}
+
+.email {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 24px;
+  color: lightskyblue;
+  text-decoration: none;
+  text-align: center;
+  border: 2px solid blueviolet;
+  padding: 5px;
+  margin-top: 10px;
+  margin-left: 100px;
 }
 
 .foot {
@@ -376,5 +265,5 @@ main a {
   text-align: right;
   font-family:'Courier New', Courier, monospace;
   color: black;
-  margin-top: -300px;
+  margin-top: 100px;
 }
